--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -14,6 +14,9 @@ button, input, textarea
 iframe
   width: 100%
   height: 100%
+.body
+  &-locked
+    overflow: hidden
 .container
   max-width: 1110px
   margin: auto
