--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -64,9 +64,11 @@
     color: $light
     background-color: $dark
     max-width: 364px
-    height: 500px
-    padding: 40px 21px 30px 43px
-    overflow-y: scroll
+    max-height: 500px
+    padding: 40px 21px 28px 43px
+    overflow-y: auto
+    scrollbar-width: thin
+    scrollbar-color: $dark #85919E
     &::-webkit-scrollbar
       width: 6px
       height: 6px
